Crashes in SandboxExtension::consumePermanently when uploading https://bugs.webkit.org/show_bug.cgi?id=144611 rdar://problem/10156710

Reviewed by Darin Adler.

This only fixes the crashes, uploading still won't work.
Added null checks and some logging that may help us get to the root cause eventually.

* Shared/SandboxExtension.h:
(WebKit::SandboxExtension::createHandle):
(WebKit::SandboxExtension::createHandleForReadWriteDirectory):
* Shared/mac/SandboxExtensionMac.mm:
(WebKit::SandboxExtension::createHandle):
(WebKit::SandboxExtension::createHandleForReadWriteDirectory):
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didChooseFilesForOpenPanel):
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::extendSandboxForFileFromOpenPanel):


Canonical link: https://commits.webkit.org/162646@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183811 268f45cc-cd09-0410-ab3c-d52691b4dbfc