Source/WebKit2/Shared/SandboxExtension.h
@@ -90,8 +90,8 @@ public:
     };
     
     static PassRefPtr<SandboxExtension> create(const Handle&);
-    static void createHandle(const String& path, Type type, Handle&);
-    static void createHandleForReadWriteDirectory(const String& path, Handle&); // Will attempt to create the directory.
+    static bool createHandle(const String& path, Type type, Handle&);
+    static bool createHandleForReadWriteDirectory(const String& path, Handle&); // Will attempt to create the directory.
     static String createHandleForTemporaryFile(const String& prefix, Type type, Handle&);
     ~SandboxExtension();
 
@@ -124,8 +124,8 @@ inline SandboxExtension::Handle& SandboxExtension::HandleArray::operator[](size_
 inline void SandboxExtension::HandleArray::encode(IPC::ArgumentEncoder&) const { }
 inline bool SandboxExtension::HandleArray::decode(IPC::ArgumentDecoder&, HandleArray&) { return true; }
 inline PassRefPtr<SandboxExtension> SandboxExtension::create(const Handle&) { return 0; }
-inline void SandboxExtension::createHandle(const String&, Type, Handle&) { }
-inline void SandboxExtension::createHandleForReadWriteDirectory(const String&, Handle&) { }
+inline bool SandboxExtension::createHandle(const String&, Type, Handle&) { return true; }
+inline bool SandboxExtension::createHandleForReadWriteDirectory(const String&, Handle&) { return true; }
 inline String SandboxExtension::createHandleForTemporaryFile(const String& /*prefix*/, Type, Handle&) {return String();}
 inline SandboxExtension::~SandboxExtension() { }
 inline bool SandboxExtension::revoke() { return true; }
